--- a/views/SignUpAdopter.ejs
+++ b/views/SignUpAdopter.ejs
@@ -124,8 +124,7 @@
                         <p class="aclaration" style="font-size: 15px; text-align: center;">Al pulsar el botón "Continuar" confirmas que has leido y aceptas los 
                         <a href="#" style="color: #97c1cc; font-weight: 400;">Términos y Condiciones</a> y la 
                         <a href="#" style="color: #97c1cc; font-weight: 400;">Política de Privacidad</a> de Adóptame.</p>
-                        <button type="submit" id="submit-button" class="button" style="margin-top: 25px;" onclick="submit_form()">Continuar</button>
-<!--TODO eliminar-->    <button type="button" class="button" style="margin-top: 25px; background-color: #ffbb00;" onclick="window.location.href='/confirmation'">Confirmar</button>
+                        <button type="submit" id="submit-button" class="button" style="margin-top: 25px;">Continuar</button>  
                     </div>
                 </div>
             </div>
