paginas en construccion

--- a/views/Header.ejs
+++ b/views/Header.ejs
@@ -13,8 +13,8 @@
                 <a href="/Home.html"><img class="logo_negro" src="/resources/img/logo_negro.png"></a>
                 <div class="menu"  id="menu_id">
                     <a href="/Home.html">Inicio</a>
-                    <a href="">Animales</a>
-                    <a href="">Protectoras</a>
+                    <a href="/Animals.html">Animales</a>
+                    <a href="/Shelters.html">Protectoras</a>
                     <a href="/AboutUs.html">Sobre Nosotros</a>
                     <a href="/Contact.html">Contacto</a>
                     <a href="/Ayuda.html">Ayuda</a>
