--- a/views/Shelters.ejs
+++ b/views/Shelters.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Adoptame</title>
+    <title>Protectoras - Adoptame</title>
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="/css/signup.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -30,7 +30,6 @@
             </div>
         </div>
     </div>
-
     <%- include('./Footer'); %>
 </body>
 
