--- a/views/SignUpAdopter.ejs
+++ b/views/SignUpAdopter.ejs
@@ -53,7 +53,7 @@
                 </div>
                 <div class="row">
                     <div class="col" style="margin-top: 25px;">
-                        <input name="jqueryDate" id="date" type="text" maxlength="10" class="floating-input" placeholder=" ">
+                        <input name="jqueryDate" id="date" type="text"  class="floating-input" >
                         <label id="date_tag" style="font-weight: 100;">Fecha de nacimiento</label>
                         <p class="aclaration" style="margin-top: 15px;">Ejemplo: 01/01/2001</p>
                     </div>
