--- a/views/VerPerfilAdoptante.ejs
+++ b/views/VerPerfilAdoptante.ejs
@@ -70,7 +70,7 @@
             <div class="container" style="max-width: 700px; margin-bottom: 75px;">
                 <div class="row">
                     <div class="col">
-<!--TODO eliminar-->    <button type="button" class="button" style="margin-top: 25px; background-color: #1a4b83;" onclick="window.location.href='/modprofile'">Editar Perfil</button>
+<!--   <button type="button" class="button" style="margin-top: 25px; background-color: #1a4b83;" onclick="window.location.href='/modprofile'">Editar Perfil</button> -->  
                     </div>
                 </div>
             </div>
