--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -20,7 +20,7 @@
 
     <!-- cuerpo de la pagina -->
     <div class="content main-img">
-        <div class="container">
+        <div class="container main-content">
             <div class="row cuadrarHeader">
                 <div class="col-md-offset-4 col-md-4">
                     <form class="form-login cajatexto texto" action="/Login" method="POST">
@@ -41,7 +41,7 @@
                         </div>
                     </form>
                     <% if(errMsg !== null) { %>
-                        <div class="error">
+                        <div class="error alert alert-warning">
                             <span>Dirección de correo y/o contraseña no válidos</span>
                         </div> <% } %>
                 </div>
