--- a/views/SignUpShelter.ejs
+++ b/views/SignUpShelter.ejs
@@ -166,8 +166,7 @@
                         <p class="aclaration" style="font-size: 15px; text-align: center;">Al pulsar el botón "Continuar" confirmas que has leido y aceptas los 
                         <a href="#" style="color: #97c1cc; font-weight: 400;">Términos y Condiciones</a> y la 
                         <a href="#" style="color: #97c1cc; font-weight: 400;">Política de Privacidad</a> de Adóptame.</p>
-                        <button type="submit" id="submit-button" class="button" style="margin-top: 25px;" ">Continuar</button>
-
+                        <button type="submit" id="submit-button" class="button" style="margin-top: 25px;" onclick="submit_form()">Continuar</button>
                     </div>
                 </div>
             </div>
