--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="es">
 
@@ -26,8 +28,8 @@
                 <h1 >
                 </figure>
                 <div class="col-md-30">
-                <div class="panel panel-info ">
-                        <div class="colorcuadro panel-heading ">
+                <div class="panel  ">
+                        <div class="colorcuadro  ">
                             Contacto
                         </div>
                         <div class="panel-body">
@@ -44,8 +46,8 @@
                     </div>
               </div>
               <div class="col-xs-12 col-sm-8">
-                <div class="panel panel-info">
-                    <div class="panel-heading">
+                <div class="panel ">
+                    <div class="colorcuadro">
                             Ciudad:
                     </div>
                     <div class="panel-body">
@@ -55,8 +57,8 @@
                     </div>
                 </div>
                 
-                    <div class="panel panel-info">
-                            <div class="panel-heading">
+                    <div class="panel ">
+                            <div class="colorcuadro">
                                     Dirección:
                             </div>
                             <div class="panel-body">
@@ -66,8 +68,8 @@
                             </div>
                         </div>
                     
-                    <div class="panel panel-info">
-                            <div class="panel-heading">
+                    <div class=" panel  ">
+                            <div class="colorcuadro">
                                     Descripción:
                             </div>
                             <div class="panel-body">
@@ -84,7 +86,7 @@
         <form action="/protectoras" method="GET">
     
     
-            <div class="botonera">
+            <div class="boton">
                 <input type="submit" class="btn btn-info volver" value="Volver">
             </div>
         </form>
