--- a/views/Animals.ejs
+++ b/views/Animals.ejs
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +5,7 @@
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="/css/signup.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/listarperros.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 </head>
 
@@ -19,10 +17,10 @@
             <div class="row">
                 <div class="col sign-up-page" style="margin-top: 110px;"> <!--130px-->
                     <h1>¡Esta seccion estara disponible en el proximo sprint!</h1>
-                   
+
                     <img src="/resources/img/building.png" width="450px">
                     <h2>Ten paciencia, estamos programando con el maximo cuidado para que disfrutes de la mejor experiencia de usuario posible.</h2>
-                    
+
                     <div style="margin-top: 30px; margin-bottom: 100px;">
                         <!--<button id="redend_button" class="button" onclick=""> Inicio</button>-->
                     </div>
@@ -33,5 +31,3 @@
 
     <%- include('./Footer'); %>
 </body>
-
-</html>
