Estructura descripción animal usuario

--- a/views/Animals.ejs
+++ b/views/Animals.ejs
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -8,8 +6,11 @@
     <link rel="stylesheet" href="/css/general.css">
     <link rel="stylesheet" href="/css/signup.css">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/listarperros.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 </head>
+
+
 
 <body>
     <%- include('./Header'); %>
@@ -33,5 +34,3 @@
 
     <%- include('./Footer'); %>
 </body>
-
-</html>
