--- a/views/ListarAdoptantes.ejs
+++ b/views/ListarAdoptantes.ejs
@@ -19,7 +19,7 @@
             <div class="row">
                 <div class="page-header">
                     <div class="col-md-12">
-                        <h2>Gestión de usuarios</h2>
+                        <h2>Lista de Adoptantes</h2>
                     </div>
                 </div>
             </div>
@@ -32,8 +32,7 @@
                             <th scope="col">Apellidos</th>
                             <th scope="col">Fecha de Registro</th>
                             <th scope="col">Email</th>
-                            <th scope="col">Rol</th>
-                            <th scope="col">Acciones</th>
+                            <th scope="col">Editar</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -42,48 +41,42 @@
                             <td>Perez</td>
                             <td>20/03/2020</td>
                             <td><a href="#">l1@gmail.com</a></td>
-                            <td>Adoptante</td>
-                            <td><ion-icon name="create-outline"></ion-icon><a href="#" onclick="delete_user(8)"><ion-icon name="close-outline"></ion-icon></a></td>
+                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
                           </tr>
                           <tr>
                             <th scope="row">Daniela</th>
                             <td>Garcia</td>
                             <td>19/03/2020</td>
                             <td><a href="#">l2@gmail.com</a></td>
-                            <td>Administrador</td>
-                            <td><ion-icon name="create-outline"></ion-icon><a href="#" onclick="delete_user(2)"><ion-icon name="close-outline"></ion-icon></a></td>
+                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
                           </tr>
                           <tr>
                             <th scope="row">Juan</th>
                             <td>Gonzalez</td>
                             <td>18/03/2020</td>
                             <td><a href="#">l3@gmail.com</a></td>
-                            <td>Adoptante</td>
-                            <td><ion-icon name="create-outline"></ion-icon><a href="#" onclick="delete_user(6)"><ion-icon name="close-outline"></ion-icon></a></td>
+                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
                           </tr>
                           <tr>
                             <th scope="row">Luis</th>
                             <td>Cerrón</td>
                             <td>17/03/2020</td>
                             <td><a href="#">l4@gmail.com</a></td>
-                            <td>Protectora</td>
-                            <td><ion-icon name="create-outline"></ion-icon><a href="#" onclick="delete_user(5)"><ion-icon name="close-outline"></ion-icon></a></td>
+                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
                           </tr>
                           <tr>
                             <th scope="row">Alberto</th>
                             <td>Partida</td>
                             <td>16/03/2020</td>
                             <td><a href="#">l5@gmail.com</a></td>
-                            <td>Protectora</td>
-                            <td><ion-icon name="create-outline"></ion-icon><a href="#" onclick="delete_user(4)"><ion-icon name="close-outline"></ion-icon></a></td>
+                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
                           </tr>
                           <tr>
                             <th scope="row">Eduardo</th>
                             <td>Ortega</td>
                             <td>15/03/2020</td>
                             <td><a href="#">l6@gmail.com</a></td>
-                            <td>Adoptante</td>
-                            <td><ion-icon name="create-outline"></ion-icon><a href="#" onclick="delete_user(3)"><ion-icon name="close-outline"></ion-icon></a></td>
+                            <td><a href="editarAdoptante/{id}"><ion-icon name="create-outline"></ion-icon></a></td>
                           </tr>
                         </tbody>
                       </table>
@@ -91,16 +84,6 @@
             </div>
         </div>
     </div>
-    <script>
-        function delete_user(id_user) {
-          var return_delete = confirm("¿Seguro que quiere eliminar al usuario "+id_user+"?");
-          if(return_delete){
-            alert("Usuario eliminado");
-            // bbdd
-          }
-        }
-    </script> 
-
     <%- include('./Footer'); %>
 </body>
 
