--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -30,7 +30,7 @@
                 <div class="col-md-30">
                 <div class="panel  ">
                         <div class="colorcuadro  ">
-                            Contacto
+                            Nombre:
                         </div>
                         <div class="panel-body">
                             <div class="list-decks ">
@@ -70,7 +70,7 @@
                     
                     <div class=" panel  ">
                             <div class="colorcuadro">
-                                    Descripción:
+                                    Detalles:
                             </div>
                             <div class="panel-body">
                                 <div class="list-decks">
