--- a/views/SolicitudesProtectoras.ejs
+++ b/views/SolicitudesProtectoras.ejs
@@ -29,10 +29,9 @@
                         <thead>
                           <tr>
                             <th scope="col">Nombre</th>
-                            <th scope="col">Telefono</th>
-                            <th scope="col">Fecha de Solicitud</th>
                             <th scope="col">Email</th>
-                            <th scope="col">Provicia</th>
+                            <th scope="col">Dirección</th>
+                            <th scope="col">Web</th>
                             <th scope="col">Detalles</th>
                             <th scope="col">Acciones</th>
                           </tr>
@@ -40,60 +39,54 @@
                         <tbody>
                           <tr>
                             <th scope="row">Protectora 1</th>
-                            <td>123456789</td>
-                            <td>15/03/2020</td>
                             <td><a href="#">l6@gmail.com</a></td>
-                            <td>Madrid</td>
+                            <td>calle Siniestro, 28, Madrid</td>
+                            <td><a href="#">protectora1.com</a></td>
                             <td class="cursor" data-toggle="modal" data-target="#detalleSolicitud"><ion-icon name="create-outline"></ion-icon></td>
                             <td> <button type="submit" class="btn btn-success btn-xs aceptarProtectora" idProtectora="1">Aceptar</button>
                               <button type="submit" class="btn btn-danger btn-xs rechazarProtectora" idProtectora="1">Rechazar</button></td>
                           </tr>
                           <tr>
                             <th scope="row">Protectora 1</th>
-                            <td>123456789</td>
-                            <td>15/03/2020</td>
                             <td><a href="#">l6@gmail.com</a></td>
-                            <td>Madrid</td>
+                            <td>calle Siniestro, 28, Madrid</td>
+                            <td><a href="#">protectora1.com</a></td>
                             <td class="cursor" data-toggle="modal" data-target="#detalleSolicitud"><ion-icon name="create-outline"></ion-icon></td>
                             <td> <button type="submit" class="btn btn-success btn-xs aceptarProtectora" idProtectora="2">Aceptar</button>
                               <button type="submit" class="btn btn-danger btn-xs rechazarProtectora" idProtectora="2">Rechazar</button></td>
                           </tr>
                           <tr>
                             <th scope="row">Protectora 1</th>
-                            <td>123456789</td>
-                            <td>15/03/2020</td>
                             <td><a href="#">l6@gmail.com</a></td>
-                            <td>Madrid</td>
+                            <td>calle Siniestro, 28, Madrid</td>
+                            <td><a href="#">protectora1.com</a></td>
                             <td class="cursor" data-toggle="modal" data-target="#detalleSolicitud"><ion-icon name="create-outline"></ion-icon></td>
                             <td> <button type="submit" class="btn btn-success btn-xs aceptarProtectora" idProtectora="3">Aceptar</button>
                               <button type="submit" class="btn btn-danger btn-xs rechazarProtectora" idProtectora="3">Rechazar</button></td>
                           </tr>
                           <tr>
                             <th scope="row">Protectora 1</th>
-                            <td>123456789</td>
-                            <td>15/03/2020</td>
                             <td><a href="#">l6@gmail.com</a></td>
-                            <td>Madrid</td>
+                            <td>calle Siniestro, 28, Madrid</td>
+                            <td><a href="#">protectora1.com</a></td>
                             <td class="cursor" data-toggle="modal" data-target="#detalleSolicitud"><ion-icon name="create-outline"></ion-icon></td>
                             <td> <button type="submit" class="btn btn-success btn-xs aceptarProtectora" idProtectora="4">Aceptar</button>
                               <button type="submit" class="btn btn-danger btn-xs rechazarProtectora" idProtectora="4">Rechazar</button></td>
                           </tr>
                           <tr>
                             <th scope="row">Protectora 1</th>
-                            <td>123456789</td>
-                            <td>15/03/2020</td>
                             <td><a href="#">l6@gmail.com</a></td>
-                            <td>Madrid</td>
+                            <td>calle Siniestro, 28, Madrid</td>
+                            <td><a href="#">protectora1.com</a></td>
                             <td class="cursor" data-toggle="modal" data-target="#detalleSolicitud"><ion-icon name="create-outline"></ion-icon></td>
                             <td> <button type="submit" class="btn btn-success btn-xs aceptarProtectora" idProtectora="5">Aceptar</button>
                               <button type="submit" class="btn btn-danger btn-xs rechazarProtectora" idProtectora="5">Rechazar</button></td>
                           </tr>
                           <tr>
                             <th scope="row">Protectora 1</th>
-                            <td>123456789</td>
-                            <td>15/03/2020</td>
                             <td><a href="#">l6@gmail.com</a></td>
-                            <td>Madrid</td>
+                            <td>calle Siniestro, 28, Madrid</td>
+                            <td><a href="#">protectora1.com</a></td>
                             <td class="cursor" data-toggle="modal" data-target="#detalleSolicitud"><ion-icon name="create-outline"></ion-icon></td>
                             <td> <button type="submit" class="btn btn-success btn-xs aceptarProtectora" idProtectora="6">Aceptar</button>
                               <button type="submit" class="btn btn-danger btn-xs rechazarProtectora" idProtectora="6">Rechazar</button></td>
@@ -124,23 +117,19 @@
                     <div class="col-sm-7">
                       <h5>Protectora 1</h5>
                     </div>
-                    <label for="inputEmail3" class="col-sm-5 col-form-label">Telefono:</label>
-                    <div class="col-sm-7">
-                      <h5>123456789</h5>
-                    </div>
                     <label for="inputEmail3" class="col-sm-5 col-form-label">Dirección:</label>
                     <div class="col-sm-7">
-                      <h5>Calle juarez 1</h5>
+                      <h5>calle Siniestro, 28, Madrid</h5>
                     </div>
-                    <label for="inputEmail3" class="col-sm-5 col-form-label">Provicia:</label>
+                    <label for="inputEmail3" class="col-sm-5 col-form-label">Web:</label>
                     <div class="col-sm-7">
-                      <h5>Madrid</h5>
+                      <h5><a href="#">protectora1.com</a></h5>
                     </div>
                     <label for="inputEmail3" class="col-sm-5 col-form-label">Email:</label>
                     <div class="col-sm-7">
                       <h5>protectora1@gmail.com</h5>
                     </div>
-                    <label for="inputEmail3" class="col-sm-5 col-form-label">Detalles:</label>
+                    <label for="inputEmail3" class="col-sm-5 col-form-label">Descripción:</label>
                     <div class="col-sm-12">
                       <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vehicula ante id congue consectetur. Suspendisse potenti. Pellentesque non risus viverra, aliquet neque sit amet, feugiat leo. Quisque non erat consectetur, gravida purus ac, condimentum massa. Duis blandit velit at molestie venenatis. Nulla quis mauris ex. Donec urna tellus, eleifend non iaculis eget, mollis sed lectus. Duis id nisi enim. Praesent malesuada sem ac tristique aliquet. Vivamus p.</h6>
                     </div>
