--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -24,20 +24,23 @@
             <div class="col-lg-12">
               <div class="col-md-4">
                <figure>
-                <img class="img-thumbnail"  height= 600 width="600">
+                <img src= <%=foto%> class="img-thumbnail"  height= 600 width="600">
+                 
                 <h1 >
                 </figure>
                 <div class="col-md-30">
                 <div class="panel  ">
-                        <div class="colorcuadro  ">
-                            Nombre:
+                        <div class="colorcuadro tipoletra ">
+                            Nombre:  <%=nombre%> 
                         </div>
                         <div class="panel-body">
-                            <div class="list-decks ">
+                           
+                            <div class="list-decks">
                                 <p>Correo: <span class="glyphicon glyphicon-envelope"></span>
-                             
+                                 <%=correo%> 
                                 </p>
                                 Teléfono: <span class="glyphicon glyphicon-earphone"></span>
+                                <%=telefono%>
                                 
                             </div>  
                         </div>       
@@ -47,10 +50,11 @@
               </div>
               <div class="col-xs-12 col-sm-8">
                 <div class="panel ">
-                    <div class="colorcuadro">
+                    <div class="colorcuadro tipoletra">
                             Ciudad:
                     </div>
                     <div class="panel-body">
+                        <%=ciudad%>
                         <div class="list-decks">
                             
                         </div>        
@@ -58,10 +62,11 @@
                 </div>
                 
                     <div class="panel ">
-                            <div class="colorcuadro">
+                            <div class="colorcuadro tipoletra">
                                     Dirección:
                             </div>
                             <div class="panel-body">
+                                <%=direccion%>
                                 <div>
                                     
                             </div>       
@@ -69,10 +74,11 @@
                         </div>
                     
                     <div class=" panel  ">
-                            <div class="colorcuadro">
+                            <div class="colorcuadro tipoletra">
                                     Detalles:
                             </div>
                             <div class="panel-body">
+                                <%=descripcion%>
                                 <div class="list-decks">
                                    
                                 </div>        
@@ -83,7 +89,7 @@
           </div>
         </div>
     
-        <form action="/protectoras" method="GET">
+        <form action="/Shelters.html" method="GET">
     
     
             <div class="boton">
