--- a/views/detalleprotectora.ejs
+++ b/views/detalleprotectora.ejs
@@ -31,16 +31,16 @@
                 <div class="col-md-30">
                 <div class="panel  ">
                         <div class="colorcuadro tipoletra ">
-                            Nombre:  <%=nombre%> 
+                            Nombre:  <span style= "color:rgb(115, 115, 115);"><%=nombre%></span> 
                         </div>
                         <div class="panel-body">
                            
                             <div class="list-decks">
                                 <p>Correo: <span class="glyphicon glyphicon-envelope"></span>
-                                 <%=correo%> 
+                                <span style= "color:rgb(115, 115, 115);"><%=correo%></span>
                                 </p>
                                 Teléfono: <span class="glyphicon glyphicon-earphone"></span>
-                                <%=telefono%>
+                                <span style= "color:rgb(115, 115, 115);"><%=telefono%></span>
                                 
                             </div>  
                         </div>       
@@ -54,7 +54,7 @@
                             Ciudad:
                     </div>
                     <div class="panel-body">
-                        <%=ciudad%>
+                        <span style= "color:rgb(115, 115, 115);"><%=ciudad%></span>
                         <div class="list-decks">
                             
                         </div>        
@@ -66,7 +66,7 @@
                                     Dirección:
                             </div>
                             <div class="panel-body">
-                                <%=direccion%>
+                                <span style= "color:rgb(115, 115, 115);"><%=direccion%></span>
                                 <div>
                                     
                             </div>       
@@ -78,7 +78,7 @@
                                     Detalles:
                             </div>
                             <div class="panel-body">
-                                <%=descripcion%>
+                                <span style= "color:rgb(115, 115, 115);"><%=descripcion%></span>
                                 <div class="list-decks">
                                    
                                 </div>        
