--- a/views/ModificarAnimal.ejs
+++ b/views/ModificarAnimal.ejs
@@ -29,17 +29,22 @@
             
             <div class="marge texto" action=" ">
                 <!--hacer modificaciones pertinentes-->
+                <!--foto-->
+
+
                 <input type="text" class="form-control input-group-sm chat-input" placeholder="Nombre" required>
                 </br>
                 <input type="text" class="form-control input-group-sm chat-input" placeholder="Genero" required>
                 </br>
-                <input type="email" class="form-control input-group-sm chat-input" name="Edad" placeholder="Correo" required>
+                <input type="text" class="form-control input-group-sm chat-input" placeholder="Edad" required>
                 </br>
-                <input type="text" class="form-control input-group-sm chat-input" placeholder="Teléfono/Móvil" pattern="{9}" required></br>
+                <input type="text" class="form-control input-group-sm chat-input" placeholder="Raza" required>
+                </br>
+                <input type="text" class="form-control input-group-sm chat-input" placeholder="Localidad" required>
+                </br>
                 <textarea rows="5" cols="20" class="form-control input-group-sm chat-input" placeholder="Descripción" required></textarea></br>
-                <input type="radio" name="ok" required>Acepto la politica de privacidad de datos </br>
-                </br>
-                <button type="submit"> Enviar </button>
+               
+                <button type="submit"> OK </button>
                 <input type="reset"  value="Cancelar">
             </div>
                
