Añadir boton pre-adopcion

--- a/views/ContactForm.ejs
+++ b/views/ContactForm.ejs
@@ -31,7 +31,7 @@
      
         <div class="cajatexto">
     
-                <form class="marge texto" action=" " >
+                <form class="marge texto" >
                     
                     <input type="text" class="form-control input-group-sm chat-input" placeholder="Nombre" required>
                      </br>
@@ -43,12 +43,13 @@
                     <textarea rows="5" cols="20" class="form-control input-group-sm chat-input" placeholder="Descripción" required></textarea></br>
                     <input type="radio" name="ok" required>Acepto la politica de privacidad de datos </br>
                     </br>
-                    <button type="submit"> Enviar </button>
-                    <input type="reset"  value="Cancelar">
-                                     
+                    <input type="submit"  value="Enviar">     
                 </form>
-           
-                
+
+                <form class= "texto" action="/DescripcionAnimalUsuario" method="GET"> 
+                    <input type="submit"  value="Cancelar"> 
+                </form>
+                  
        
         </div>
     </div>
