--- a/views/DescripcionAnimalUsuario.ejs
+++ b/views/DescripcionAnimalUsuario.ejs
@@ -55,6 +55,13 @@
         <form action="/animals.html" method="GET"> <!-- redirige a lista de los animales (Animals)-->
             <input type="submit" class="btn btn-info botondetalle" value="Volver">
         </form>
+
+        <!--if( registro == "adoptante"){-->
+        <form action="/ContactForm.html" method="GET"> <!-- redirige al formulario de pre-adopcion-->
+            <input type="submit" class="btn btn-info botondetalle" value="Adoptame">
+        </form>
+        <!-- } -->
+
     </div>   
 
     <%- include('./footer'); %>
